--- a/index.html
+++ b/index.html
@@ -69,4 +69,40 @@
         }
     </script>
 </body>
+
 </html>
+<div class="mt-20 max-w-4xl mx-auto">
+    <h2 class="neon-text text-2xl mb-6">EXPECTED PERFORMANCE BOOST</h2>
+    <div class="overflow-hidden rounded-xl border border-gray-800 bg-gray-900/50">
+        <table class="w-full text-left border-collapse">
+            <thead class="bg-gray-800/50 text-cyan-400 uppercase text-xs tracking-widest">
+                <tr>
+                    <th class="p-4">Game</th>
+                    <th class="p-4">Stock FPS (i3/8GB)</th>
+                    <th class="p-4 text-purple-400">ULTRA_OPT FPS</th>
+                    <th class="p-4">Status</th>
+                </tr>
+            </thead>
+            <tbody class="text-gray-300 divide-y divide-gray-800">
+                <tr class="hover:bg-gray-800/30 transition">
+                    <td class="p-4 font-bold">Fortnite</td>
+                    <td class="p-4">45-60</td>
+                    <td class="p-4 text-white">95-120</td>
+                    <td class="p-4"><span class="bg-green-500/20 text-green-400 text-xs px-2 py-1 rounded">STABLE</span></td>
+                </tr>
+                <tr class="hover:bg-gray-800/30 transition">
+                    <td class="p-4 font-bold">Minecraft</td>
+                    <td class="p-4">80-100</td>
+                    <td class="p-4 text-white">240+</td>
+                    <td class="p-4"><span class="bg-green-500/20 text-green-400 text-xs px-2 py-1 rounded">STABLE</span></td>
+                </tr>
+                <tr class="hover:bg-gray-800/30 transition">
+                    <td class="p-4 font-bold">Roblox</td>
+                    <td class="p-4">60 (Locked)</td>
+                    <td class="p-4 text-white">144+</td>
+                    <td class="p-4"><span class="bg-green-500/20 text-green-400 text-xs px-2 py-1 rounded">UNLOCKED</span></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
