--- a/index.html
+++ b/index.html
@@ -106,3 +106,15 @@
         </table>
     </div>
 </div>
+<div class="fixed bottom-5 right-5 card p-4 w-64 hidden md:block border-l-4 border-l-cyan-500">
+    <div class="flex items-center justify-between mb-2">
+        <span class="text-xs text-gray-500 uppercase">Optimizer Engine</span>
+        <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span>
+    </div>
+    <div class="text-sm">
+        <p class="mb-1">VRAM Spoof: <span class="text-cyan-400 font-mono">ACTIVE</span></p>
+        <p class="mb-1">Kernel Throttling: <span class="text-purple-500 font-mono">DISABLED</span></p>
+        <p>Latency Buffer: <span class="text-cyan-400 font-mono">0.02ms</span></p>
+    </div>
+</div>    
+
