--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
             <a href="#" class="hover:text-cyan-400">Pro Tools</a>
             <a href="#" class="hover:text-cyan-400">Discord</a>
         </div>
+        <nav class="flex justify-between items-center mb-20">
+    <h1 class="neon-text text-3xl italic">ULTRA_OPT</h1>
+    <div class="flex items-center space-x-6">
+        <a href="#" class="hover:text-cyan-400 uppercase text-xs tracking-widest">Home</a>
+        <a href="https://discord.com/channels/1473327760825909500/1473328100187050070" target="_blank" class="bg-[#5865F2] hover:bg-[#4752C4] text-white px-5 py-2 rounded font-bold transition flex items-center gap-2">
+            <img src="https://assets-global.website-files.com/6257adef93867e3d03400e20/6257af14c67926792944f77c_df3c3e8a4a5840d860e3d237be7088b3.svg" width="20" class="invert">
+            JOIN THE LAB
+        </a>
+    </div>
+</nav>
     </nav>
 
     <div class="max-w-6xl mx-auto text-center">
@@ -117,4 +127,5 @@
         <p>Latency Buffer: <span class="text-cyan-400 font-mono">0.02ms</span></p>
     </div>
 </div>    
+
 
