--- a/index.html
+++ b/index.html
@@ -7,125 +7,86 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        body { background-color: #050505; color: #e5e5e5; font-family: 'Inter', sans-serif; }
+        body { background-color: #050505; color: #e5e5e5; font-family: 'Inter', sans-serif; overflow-x: hidden; }
         .neon-text { font-family: 'Orbitron', sans-serif; color: #00f2ff; text-shadow: 0 0 10px #00f2ff; }
-        .game-card { background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(0, 242, 255, 0.1); transition: 0.3s; }
-        .game-card:hover { border-color: #7000ff; box-shadow: 0 0 20px rgba(112, 0, 255, 0.3); }
-        .active-tab { border-bottom: 3px solid #00f2ff; color: #00f2ff; }
+        .card { background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); }
+        .glow-button { transition: 0.3s; box-shadow: 0 0 15px rgba(0, 242, 255, 0.2); border: 1px solid #00f2ff; }
+        .glow-button:hover { box-shadow: 0 0 30px rgba(0, 242, 255, 0.5); transform: translateY(-2px); background: #00f2ff; color: black; }
+        .tab-btn { transition: 0.3s; border-bottom: 2px solid transparent; }
+        .tab-btn.active { border-color: #00f2ff; color: #00f2ff; shadow: 0 0 10px #00f2ff; }
+        nav { z-index: 9999; position: relative; } /* This ensures the nav is ALWAYS on top and clickable */
     </style>
 </head>
-<body class="p-10">
-    <nav class="flex justify-between items-center mb-20">
-        <h1 class="neon-text text-3xl italic">ULTRA_OPT</h1>
-        <div class="space-x-6 text-sm uppercase tracking-widest">
-            <a href="#" class="hover:text-cyan-400">Home</a>
-            <a href="#" class="hover:text-cyan-400">Pro Tools</a>
-            <a href="#" class="hover:text-cyan-400">Discord</a>
+<body class="p-6 md:p-12">
+
+    <nav class="flex flex-col md:flex-row justify-between items-center mb-16 gap-6">
+        <h1 class="neon-text text-3xl italic tracking-tighter">ULTRA_OPT</h1>
+        <div class="flex items-center space-x-8 uppercase text-xs tracking-widest font-bold">
+            <a href="index.html" class="text-cyan-400 hover:text-white transition">Home</a>
+            <a href="#pro-tools" class="text-gray-400 hover:text-cyan-400 transition">Pro Tools</a>
+            <a href="#" target="_blank" class="bg-[#5865F2] text-white px-6 py-2 rounded-full hover:scale-105 transition shadow-lg">JOIN DISCORD</a>
         </div>
-        <nav class="flex justify-between items-center mb-20">
-    <h1 class="neon-text text-3xl italic">ULTRA_OPT</h1>
-    <div class="flex items-center space-x-6">
-        <a href="#" class="hover:text-cyan-400 uppercase text-xs tracking-widest">Home</a>
-        <a href="https://discord.com/channels/1473327760825909500/1473328100187050070" target="_blank" class="bg-[#5865F2] hover:bg-[#4752C4] text-white px-5 py-2 rounded font-bold transition flex items-center gap-2">
-            <img src="https://assets-global.website-files.com/6257adef93867e3d03400e20/6257af14c67926792944f77c_df3c3e8a4a5840d860e3d237be7088b3.svg" width="20" class="invert">
-            JOIN THE LAB
-        </a>
-    </div>
-</nav>
     </nav>
 
-    <div class="max-w-6xl mx-auto text-center">
-        <h2 class="text-6xl font-black mb-4">STOP THE <span class="text-purple-500">LAG.</span></h2>
-        <p class="text-gray-500 text-xl mb-12">One-click kernel optimizations for low-end legends.</p>
+    <div class="max-w-6xl mx-auto text-center relative z-10">
+        <h2 class="text-5xl md:text-8xl font-black mb-6 tracking-tighter">
+            ZERO <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-purple-600">LAG.</span>
+        </h2>
+        <p class="text-gray-500 text-lg md:text-xl mb-12 max-w-2xl mx-auto">Master-grade kernel tweaks for i3 and Low-End legends. Don't let your hardware hold you back.</p>
 
-        <div class="flex justify-center space-x-12 mb-10 border-b border-gray-800 pb-2">
-            <button onclick="showGame('fortnite')" class="tab-btn active-tab font-bold pb-2">FORTNITE</button>
-            <button onclick="showGame('minecraft')" class="tab-btn font-bold pb-2">MINECRAFT</button>
-            <button onclick="showGame('roblox')" class="tab-btn font-bold pb-2">ROBLOX</button>
+        <div class="flex justify-center space-x-6 md:space-x-12 mb-10 border-b border-gray-800 pb-2">
+            <button onclick="showGame('fortnite', this)" class="tab-btn active pb-2 font-bold uppercase tracking-widest text-sm">Fortnite</button>
+            <button onclick="showGame('minecraft', this)" class="tab-btn pb-2 font-bold uppercase tracking-widest text-sm">Minecraft</button>
+            <button onclick="showGame('roblox', this)" class="tab-btn pb-2 font-bold uppercase tracking-widest text-sm">Roblox</button>
         </div>
 
-        <div id="game-display" class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center text-left">
-            <img id="game-img" src="https://images.unsplash.com/photo-1542751371-adc38448a05e?auto=format&fit=crop&w=800&q=80" class="rounded-2xl shadow-2xl border-4 border-gray-900">
+        <div id="game-display" class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center text-left bg-gray-900/30 p-8 rounded-3xl border border-white/5">
+            <div class="overflow-hidden rounded-2xl border border-white/10 shadow-2xl">
+                <img id="game-img" src="https://images.unsplash.com/photo-1589241062272-c0a000072dfa?auto=format&fit=crop&w=800&q=80" class="w-full h-auto hover:scale-105 transition duration-700">
+            </div>
             <div>
-                <h3 id="game-title" class="text-4xl font-bold mb-4">FORTNITE MODE</h3>
-                <p id="game-desc" class="text-gray-400 mb-6">Optimizes Unreal Engine cache, reduces building delay, and spoofs VRAM for smoother FPS during end-games.</p>
-                <div class="flex space-x-4">
-                    <a href="Master_Optimizer.bat" download class="bg-cyan-500 text-black font-bold px-8 py-4 rounded-full hover:bg-white transition">DOWNLOAD SCRIPT</a>
-                    <a href="AFFILIATE_LINK" class="bg-transparent border border-gray-600 px-8 py-4 rounded-full hover:bg-gray-800">GET HONE.GG (AD)</a>
+                <h3 id="game-title" class="text-4xl font-bold mb-4 neon-text">FORTNITE MODE</h3>
+                <p id="game-desc" class="text-gray-400 text-lg mb-8 leading-relaxed">Fixes DX11/DX12 shader stutter and reduces input lag for competitive play. Removes Windows power throttling instantly.</p>
+                <div class="flex flex-col sm:flex-row gap-4">
+                    <a href="Master_Optimizer.bat" download class="glow-button px-8 py-4 rounded-xl font-bold text-center">DOWNLOAD .BAT</a>
+                    <a href="#" class="bg-white/5 border border-white/10 px-8 py-4 rounded-xl font-bold text-center hover:bg-white/10 transition">PRO TOOLS</a>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="fixed bottom-8 left-8 hidden lg:block">
+        <div class="card p-4 rounded-2xl text-xs font-mono space-y-1">
+            <div class="flex justify-between gap-8"><span class="text-gray-500 uppercase text-[10px]">CPU Status</span> <span class="text-green-400">OPTIMIZED</span></div>
+            <div class="flex justify-between gap-8"><span class="text-gray-500 uppercase text-[10px]">RAM Usage</span> <span class="text-cyan-400">MINIMIZED</span></div>
+            <div class="flex justify-between gap-8"><span class="text-gray-500 uppercase text-[10px]">Kernel Delay</span> <span class="text-purple-400">0.00ms</span></div>
+        </div>
+    </div>
+
     <script>
-        function showGame(game) {
+        function showGame(game, btn) {
+            // Update Active Tab UI
+            document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
+            btn.classList.add('active');
+
             const title = document.getElementById('game-title');
             const desc = document.getElementById('game-desc');
             const img = document.getElementById('game-img');
             
             if(game === 'fortnite') {
                 title.innerText = "FORTNITE MODE";
-                desc.innerText = "Fixes DX11/DX12 shader stutter and reduces input lag for competitive play.";
+                desc.innerText = "Fixes DX11/DX12 shader stutter and reduces input lag for competitive play. Removes Windows power throttling instantly.";
                 img.src = "https://images.unsplash.com/photo-1589241062272-c0a000072dfa?auto=format&fit=crop&w=800&q=80";
             } else if(game === 'minecraft') {
                 title.innerText = "MINECRAFT MODE";
-                desc.innerText = "Allocates garbage collection and fixes Java heap memory spills for 8GB RAM setups.";
+                desc.innerText = "Optimizes Java Garbage Collection and allocates specific RAM blocks to prevent 'Memory Spill' on 8GB systems.";
                 img.src = "https://images.unsplash.com/photo-1627398242454-45a1465c2479?auto=format&fit=crop&w=800&q=80";
             } else if(game === 'roblox') {
                 title.innerText = "ROBLOX MODE";
-                desc.innerText = "Unlocks FPS cap and clears local texture cache to stop random freezes.";
+                desc.innerText = "Unlocks the 60 FPS cap, clears local texture caches, and forces High CPU priority for smooth physics.";
                 img.src = "https://images.unsplash.com/photo-1605898835518-249051877484?auto=format&fit=crop&w=800&q=80";
             }
         }
     </script>
 </body>
-
 </html>
-<div class="mt-20 max-w-4xl mx-auto">
-    <h2 class="neon-text text-2xl mb-6">EXPECTED PERFORMANCE BOOST</h2>
-    <div class="overflow-hidden rounded-xl border border-gray-800 bg-gray-900/50">
-        <table class="w-full text-left border-collapse">
-            <thead class="bg-gray-800/50 text-cyan-400 uppercase text-xs tracking-widest">
-                <tr>
-                    <th class="p-4">Game</th>
-                    <th class="p-4">Stock FPS (i3/8GB)</th>
-                    <th class="p-4 text-purple-400">ULTRA_OPT FPS</th>
-                    <th class="p-4">Status</th>
-                </tr>
-            </thead>
-            <tbody class="text-gray-300 divide-y divide-gray-800">
-                <tr class="hover:bg-gray-800/30 transition">
-                    <td class="p-4 font-bold">Fortnite</td>
-                    <td class="p-4">45-60</td>
-                    <td class="p-4 text-white">95-120</td>
-                    <td class="p-4"><span class="bg-green-500/20 text-green-400 text-xs px-2 py-1 rounded">STABLE</span></td>
-                </tr>
-                <tr class="hover:bg-gray-800/30 transition">
-                    <td class="p-4 font-bold">Minecraft</td>
-                    <td class="p-4">80-100</td>
-                    <td class="p-4 text-white">240+</td>
-                    <td class="p-4"><span class="bg-green-500/20 text-green-400 text-xs px-2 py-1 rounded">STABLE</span></td>
-                </tr>
-                <tr class="hover:bg-gray-800/30 transition">
-                    <td class="p-4 font-bold">Roblox</td>
-                    <td class="p-4">60 (Locked)</td>
-                    <td class="p-4 text-white">144+</td>
-                    <td class="p-4"><span class="bg-green-500/20 text-green-400 text-xs px-2 py-1 rounded">UNLOCKED</span></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-<div class="fixed bottom-5 right-5 card p-4 w-64 hidden md:block border-l-4 border-l-cyan-500">
-    <div class="flex items-center justify-between mb-2">
-        <span class="text-xs text-gray-500 uppercase">Optimizer Engine</span>
-        <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span>
-    </div>
-    <div class="text-sm">
-        <p class="mb-1">VRAM Spoof: <span class="text-cyan-400 font-mono">ACTIVE</span></p>
-        <p class="mb-1">Kernel Throttling: <span class="text-purple-500 font-mono">DISABLED</span></p>
-        <p>Latency Buffer: <span class="text-cyan-400 font-mono">0.02ms</span></p>
-    </div>
-</div>    
-
-
