--- a/index.html
+++ b/index.html
@@ -7,81 +7,87 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        body { background-color: #050505; color: #e5e5e5; font-family: 'Inter', sans-serif; overflow-x: hidden; }
+        body { background-color: #050505; color: #e5e5e5; font-family: 'Inter', sans-serif; margin: 0; padding: 0; }
         .neon-text { font-family: 'Orbitron', sans-serif; color: #00f2ff; text-shadow: 0 0 10px #00f2ff; }
-        .card { background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); }
-        .glow-button { transition: 0.3s; box-shadow: 0 0 15px rgba(0, 242, 255, 0.2); border: 1px solid #00f2ff; }
-        .glow-button:hover { box-shadow: 0 0 30px rgba(0, 242, 255, 0.5); transform: translateY(-2px); background: #00f2ff; color: black; }
-        .tab-btn { transition: 0.3s; border-bottom: 2px solid transparent; }
-        .tab-btn.active { border-color: #00f2ff; color: #00f2ff; shadow: 0 0 10px #00f2ff; }
-        nav { z-index: 9999; position: relative; } /* This ensures the nav is ALWAYS on top and clickable */
+        .glow-button { transition: 0.3s; border: 1px solid #00f2ff; text-transform: uppercase; letter-spacing: 1px; }
+        .glow-button:hover { background: #00f2ff; color: black; box-shadow: 0 0 20px #00f2ff; }
+        .tab-btn { color: #666; transition: 0.3s; border-bottom: 2px solid transparent; padding-bottom: 4px; }
+        .tab-btn.active { color: #00f2ff; border-color: #00f2ff; font-weight: bold; }
     </style>
 </head>
-<body class="p-6 md:p-12">
+<body class="p-4 md:p-8">
 
-    <nav class="flex flex-col md:flex-row justify-between items-center mb-16 gap-6">
-        <h1 class="neon-text text-3xl italic tracking-tighter">ULTRA_OPT</h1>
-        <div class="flex items-center space-x-8 uppercase text-xs tracking-widest font-bold">
-            <a href="index.html" class="text-cyan-400 hover:text-white transition">Home</a>
-            <a href="#pro-tools" class="text-gray-400 hover:text-cyan-400 transition">Pro Tools</a>
-            <a href="#" target="_blank" class="bg-[#5865F2] text-white px-6 py-2 rounded-full hover:scale-105 transition shadow-lg">JOIN DISCORD</a>
+    <header class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-6 mb-16">
+        <h1 class="neon-text text-3xl">ULTRA_OPT</h1>
+        <div class="flex items-center gap-8 text-xs font-bold tracking-widest uppercase">
+            <a href="index.html" class="text-cyan-400">Home</a>
+            <a href="#" class="text-gray-400 hover:text-white transition">Pro Tools</a>
+            <a href="#" class="text-gray-400 hover:text-white transition">Discord</a>
+            <a href="YOUR_DISCORD_LINK" target="_blank" class="bg-[#5865F2] text-white px-5 py-2 rounded flex items-center gap-2 hover:scale-105 transition">
+                <img src="https://assets-global.website-files.com/6257adef93867e3d03400e20/6257af14c67926792944f77c_df3c3e8a4a5840d860e3d237be7088b3.svg" width="18" class="invert">
+                JOIN THE LAB
+            </a>
         </div>
-    </nav>
+    </header>
 
-    <div class="max-w-6xl mx-auto text-center relative z-10">
-        <h2 class="text-5xl md:text-8xl font-black mb-6 tracking-tighter">
-            ZERO <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-purple-600">LAG.</span>
-        </h2>
-        <p class="text-gray-500 text-lg md:text-xl mb-12 max-w-2xl mx-auto">Master-grade kernel tweaks for i3 and Low-End legends. Don't let your hardware hold you back.</p>
+    <main class="max-w-5xl mx-auto text-center">
+        <h2 class="text-5xl md:text-8xl font-black mb-4">STOP THE <span class="text-purple-500">LAG.</span></h2>
+        <p class="text-gray-500 text-lg mb-12">One-click kernel optimizations for low-end legends.</p>
 
-        <div class="flex justify-center space-x-6 md:space-x-12 mb-10 border-b border-gray-800 pb-2">
-            <button onclick="showGame('fortnite', this)" class="tab-btn active pb-2 font-bold uppercase tracking-widest text-sm">Fortnite</button>
-            <button onclick="showGame('minecraft', this)" class="tab-btn pb-2 font-bold uppercase tracking-widest text-sm">Minecraft</button>
-            <button onclick="showGame('roblox', this)" class="tab-btn pb-2 font-bold uppercase tracking-widest text-sm">Roblox</button>
+        <div class="flex justify-center gap-8 mb-12 border-b border-gray-800">
+            <button onclick="changeGame('fortnite', this)" class="tab-btn active uppercase text-sm tracking-widest">Fortnite</button>
+            <button onclick="changeGame('minecraft', this)" class="tab-btn uppercase text-sm tracking-widest">Minecraft</button>
+            <button onclick="changeGame('roblox', this)" class="tab-btn uppercase text-sm tracking-widest">Roblox</button>
         </div>
 
-        <div id="game-display" class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center text-left bg-gray-900/30 p-8 rounded-3xl border border-white/5">
-            <div class="overflow-hidden rounded-2xl border border-white/10 shadow-2xl">
-                <img id="game-img" src="https://images.unsplash.com/photo-1589241062272-c0a000072dfa?auto=format&fit=crop&w=800&q=80" class="w-full h-auto hover:scale-105 transition duration-700">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-10 items-center bg-gray-900/20 p-8 rounded-2xl border border-white/5 text-left">
+            <div class="rounded-xl overflow-hidden border border-white/10">
+                <img id="display-img" src="https://images.unsplash.com/photo-1589241062272-c0a000072dfa?auto=format&fit=crop&w=800&q=80" class="w-full">
             </div>
             <div>
-                <h3 id="game-title" class="text-4xl font-bold mb-4 neon-text">FORTNITE MODE</h3>
-                <p id="game-desc" class="text-gray-400 text-lg mb-8 leading-relaxed">Fixes DX11/DX12 shader stutter and reduces input lag for competitive play. Removes Windows power throttling instantly.</p>
-                <div class="flex flex-col sm:flex-row gap-4">
-                    <a href="Master_Optimizer.bat" download class="glow-button px-8 py-4 rounded-xl font-bold text-center">DOWNLOAD .BAT</a>
-                    <a href="#" class="bg-white/5 border border-white/10 px-8 py-4 rounded-xl font-bold text-center hover:bg-white/10 transition">PRO TOOLS</a>
+                <h3 id="display-title" class="text-3xl font-bold mb-4 neon-text">FORTNITE MODE</h3>
+                <p id="display-desc" class="text-gray-400 mb-8">Optimizes Unreal Engine cache, reduces building delay, and spoofs VRAM for smoother FPS during end-games.</p>
+                <div class="flex flex-wrap gap-4">
+                    <a href="Master_Optimizer.bat" download class="glow-button px-6 py-3 rounded font-bold">Download Script</a>
+                    <a href="#" class="bg-white/5 border border-white/10 px-6 py-3 rounded font-bold hover:bg-white/10 transition">Get Hone.gg (AD)</a>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="fixed bottom-8 left-8 hidden lg:block">
-        <div class="card p-4 rounded-2xl text-xs font-mono space-y-1">
-            <div class="flex justify-between gap-8"><span class="text-gray-500 uppercase text-[10px]">CPU Status</span> <span class="text-green-400">OPTIMIZED</span></div>
-            <div class="flex justify-between gap-8"><span class="text-gray-500 uppercase text-[10px]">RAM Usage</span> <span class="text-cyan-400">MINIMIZED</span></div>
-            <div class="flex justify-between gap-8"><span class="text-gray-500 uppercase text-[10px]">Kernel Delay</span> <span class="text-purple-400">0.00ms</span></div>
+        <div class="mt-20 max-w-4xl mx-auto overflow-x-auto">
+            <h4 class="text-left text-cyan-400 text-sm font-bold mb-4 uppercase tracking-widest">Expected Performance Boost</h4>
+            <table class="w-full text-left bg-gray-900/40 rounded-xl overflow-hidden">
+                <thead class="bg-gray-800 text-gray-400 text-[10px] uppercase">
+                    <tr><th class="p-4">Game</th><th class="p-4">Stock FPS</th><th class="p-4 text-purple-400">Ultra_Opt</th><th class="p-4">Status</th></tr>
+                </thead>
+                <tbody class="text-sm divide-y divide-gray-800">
+                    <tr><td class="p-4 font-bold">Fortnite</td><td class="p-4">45-60</td><td class="p-4 text-white">95-120</td><td class="p-4 text-green-400 text-xs">STABLE</td></tr>
+                    <tr><td class="p-4 font-bold">Minecraft</td><td class="p-4">80-100</td><td class="p-4 text-white">240+</td><td class="p-4 text-green-400 text-xs">STABLE</td></tr>
+                    <tr><td class="p-4 font-bold">Roblox</td><td class="p-4">60 (Locked)</td><td class="p-4 text-white">144+</td><td class="p-4 text-cyan-400 text-xs">UNLOCKED</td></tr>
+                </tbody>
+            </table>
         </div>
-    </div>
+    </main>
 
     <script>
-        function showGame(game, btn) {
-            // Update Active Tab UI
+        function changeGame(type, btn) {
+            // UI Toggle
             document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
             btn.classList.add('active');
 
-            const title = document.getElementById('game-title');
-            const desc = document.getElementById('game-desc');
-            const img = document.getElementById('game-img');
-            
-            if(game === 'fortnite') {
+            const title = document.getElementById('display-title');
+            const desc = document.getElementById('display-desc');
+            const img = document.getElementById('display-img');
+
+            if(type === 'fortnite') {
                 title.innerText = "FORTNITE MODE";
                 desc.innerText = "Fixes DX11/DX12 shader stutter and reduces input lag for competitive play. Removes Windows power throttling instantly.";
                 img.src = "https://images.unsplash.com/photo-1589241062272-c0a000072dfa?auto=format&fit=crop&w=800&q=80";
-            } else if(game === 'minecraft') {
+            } else if(type === 'minecraft') {
                 title.innerText = "MINECRAFT MODE";
                 desc.innerText = "Optimizes Java Garbage Collection and allocates specific RAM blocks to prevent 'Memory Spill' on 8GB systems.";
                 img.src = "https://images.unsplash.com/photo-1627398242454-45a1465c2479?auto=format&fit=crop&w=800&q=80";
-            } else if(game === 'roblox') {
+            } else if(type === 'roblox') {
                 title.innerText = "ROBLOX MODE";
                 desc.innerText = "Unlocks the 60 FPS cap, clears local texture caches, and forces High CPU priority for smooth physics.";
                 img.src = "https://images.unsplash.com/photo-1605898835518-249051877484?auto=format&fit=crop&w=800&q=80";
